Fix vertical alignment inside slider menus for Chrome
The flex/box is a mess between Chrome and Firefox, and fixing
it for one breaks it for the other. Make it at least work
on Chrome until the mess can be resolved.

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -321,9 +321,6 @@ label {
 
 /* slide menu for game page */
 .slide-menu {
-  display: flex;
-  display: -webkit-flex;
-
   position: absolute;
   bottom: 18%;
   width: 90%;
